--- a/DeepBlue.UI/Views/MainMenu.axaml
+++ b/DeepBlue.UI/Views/MainMenu.axaml
@@ -7,7 +7,7 @@
         x:Class="DeepBlue.Views.MainMenu"
         x:DataType="vm:MainMenuViewModel"
         Icon="/Assets/avalonia-logo.ico"
-        Title="DeepBlue">
+        Title="DeepBlue.UI">
 
     <Design.DataContext>
         <vm:MainMenuViewModel />
